Add icons&compinfo (#1188)
* add icons, premium requests

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,113 @@ yonder_rewards_cards:
 
 japan_airlines:
   - jp.co.jal.dom/jp.co.jal.dom.activities.StartActivity
+
+byair:
+  - com.byairapp.android/ru.wearemad.byair.features.launcher.LauncherActivityAlias1
+
+dolap:
+  - com.dolap.android/com.dolap.android.splash.ui.SplashActivity
+
+dr_driving:
+  - com.ansangha.drdriving/com.ansangha.drdriving.DrDrivingActivity
+
+eba:
+  - tr.gov.eba.hesap/tr.gov.eba.hesap.SplashScreenActivity
+
+jango_radio:
+  - com.jangomobile.android/com.jangomobile.android.ui.activities.SplashActivity
+
+laudate:
+  - com.aycka.apps.MassReadings/com.aycka.apps.MassReadings.Top
+
+universalis:
+  - com.universalis.android.universalis/com.universalis.android.MainActivity
+
+airplanes_live:
+  - eu.darken.apl/eu.darken.apl.main.ui.MainActivity
+
+archivekeep:
+  - org.archivekeep.ArchiveKeep/org.archivekeep.app.android.MainActivity
+
+continuum:
+  - org.cygnusx1.continuum/ml.docilealligator.infinityforreddit.activities.MainActivit
+
+custom_uploader:
+  - com.nyx.custom_uploader/com.nyx.custom_uploader.MainActivity
+
+dhizuku:
+  - com.rosan.dhizuku/com.rosan.dhizuku.ui.activity.SettingsActivity
+
+edge_seek:
+  - lsafer.edgeseek/net.lsafer.edgeseek.app.MainActivity
+
+google_notebooklm:
+  category: 'Google'
+  compinfos:
+  - com.google.android.apps.labs.language.tailwind/com.google.android.apps.labs.language.tailwind.MainActivityDev
+
+immich_uploader:
+  - com.exner.tools.immichuploader/com.exner.tools.immichuploader.MainActivity
+
+motion_ease_tune:
+  - com.bhznjns.motion_ease_tune/com.bhznjns.motion_ease_tune.MainActivity
+
+motogp:
+  - com.dorna.officialmotogp/com.dorna.officialmotogp.SplashActivity
+
+mygigroup:
+  - com.gigroup.myplatform.it.mobilecandidate/com.gigroup.myplatform.it.mobilecandidate.MainActivity
+
+pto:
+  - de.ferreum.pto/de.ferreum.pto.MainActivity
+
+pulse:
+  - partisan.weforge.xyz.pulse/partisan.weforge.xyz.pulse.WelcomeActivity
+
+simple_text_editor:
+  - com.maxistar.textpad/com.maxistar.textpad.activities.EditorActivity
+
+strong_workout_tracker:
+  - io.strongapp.strong/io.strongapp.strong.ui.main.MainActivity
+
+wikwok:
+  - com.github.terrakok.wikwok.androidApp/com.github.terrakok.wikwok.AppActivity
+
+mixcloud:
+  - com.mixcloud.player/com.mixcloud.player.MainActivity
+
+disney_plus:
+  - in.startv.hotstar.dplus/com.hotstar.MainActivity
+
+rumble:
+  - com.rumble.battles/com.rumble.battles.landing.RumbleMainActivity
+
+ayugram:
+  - com.radolyn.ayugram/com.exteragram.messenger.MonetIcon
+
+john_gba:
+  - com.johnemulators.johngbalite/com.johnemulators.activity.RomListActivity
+
+teamsnap:
+  - com.teamsnap.teamsnap/com.teamsnap.teamsnap.features.user.UserActivity
+
+flappy_bird:
+  - com.flappybird.game/android.app.NativeActivity
+
+secuso_ruler:
+  - org.secuso.privacyfriendlyruler/org.secuso.privacyfriendlyrulerapp.activities.SplashActivity
+
+ooni_probe:
+  - org.openobservatory.ooniprobe/org.ooni.probe.MainActivity
+
+burger_king:
+  - no.burgerking.ordersapp/com.deazy.popeyes.MainActivity
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconFive
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainSpring
+
+leroy_merlin:
+  - com.adeo.android.app/com.adeo.retail.mobile.app.MainActivity
