--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,16 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+fomodoro:
+  - com.arijit.pomodoro/com.arijit.pomodoro.MainActivity
+
+google_gallery_ai_edge:
+  - com.google.aiedge.gallery/com.google.ai.edge.gallery.MainActivity
+
+opentune:
+  - com.Arturo254.opentune/com.arturo254.opentune.MainActivity
+
+polycule:
+  - business.braid.polycule/business.braid.polycule.MainActivity
