add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,25 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+atrium_campus_connect:
+  - com.atriumcampus.connect/com.atrium.atriumv3.SplashActivity
+
+gold_gym_dc_metro:
+  - com.trainerize.goldsgymdcmetro/com.trainerize.MainActivity
+
+katawa_shoujo_re_engineered:
+  - sh.fhs.ksre/org.renpy.android.PythonSDLActivity
+
+mason_360:
+  - com.novalsys.gmu/com.cg.reactnative.MainActivity
+
+my_mesh:
+  - com.mymesh.wifi/com.mymesh.MyMesh.activity.Anew.Splash.SplashActivity
+
+paycell:
+  - com.turkcell.paycell/com.turkcell.paycell.ui.main.controller.MainActivity
+
+yemeksepeti:
+  - com.inovel.app.yemeksepeti/de.foodora.android.ui.launcher.LauncherActivity
