--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -34,3 +34,21 @@ paycell:
 
 yemeksepeti:
   - com.inovel.app.yemeksepeti/de.foodora.android.ui.launcher.LauncherActivity
+
+boat_progear:
+  - com.ido.boatprogear/com.ido.veryfitpro.module.bind.WelcomeActivity
+
+frontier_airlines:
+  - com.flyfrontier.android/com.flyfrontier.android.MainActivity
+
+jio_hostar:
+  - in.startv.hotstar/com.hotstar.MainActivityJv
+
+minutiae:
+  - com.minutiae/com.minutiae.splashscreen.SplashActivity
+
+pdf_wallet:
+  - com.michaeltroger.gruenerpass/com.michaeltroger.gruenerpass.MainActivity
+
+telepass:
+  - uk.co.novaware.telepass.android/it.telepass.appunica.SplashScreenActivity
