--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,36 @@ pdf_wallet:
 
 telepass:
   - uk.co.novaware.telepass.android/it.telepass.appunica.SplashScreenActivity
+
+melvor_idle:
+  - com.malcs.melvoridle/co.median.android.LaunchActivity
+
+airtel:
+  - net.omobio.airtelsc/com.portonics.robi_airtel_super_app.ui.SplashActivity
+
+zalora:
+  - com.zalora.android/com.zalora.feature.startup.splash.SplashScreenActivity
+
+ingresso:
+  - com.ingresso.cinemas/br.com.ingresso.ui.activities.alias.DefaultAlias
+
+classeviva_studenti:
+  - eu.spaggiari.classevivastudente/eu.spaggiari.classeviva.classeviva.MainActivity
+
+geekbench:
+  - com.primatelabs.geekbench3/com.primatelabs.geekbench3.HomeActivity
+
+nanoleaf:
+  - me.nanoleaf.nanoleaf/me.nanoleaf.nanoleaf.feature.launcher.LauncherActivity
+
+terminal:
+  - com.termux.widget/com.termux.widget.activities.TermuxWidgetLauncherActivity
+
+ajax_security_system:
+  - com.ajaxsystems/com.ajaxsystems.session.launcher.presentation.LauncherActivity
+
+windows_app:
+  - com.microsoft.rdc.androidx/com.microsoft.windowsapp.ui.HomeActivity
+
+tick__tick:
+  - com.ticktick.task/com.ticktick.task.HomeAlia_tick
