Add icons&compinfo (#1193)
* add icons, premium requests

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,73 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+atrium_campus_connect:
+  - com.atriumcampus.connect/com.atrium.atriumv3.SplashActivity
+
+gold_gym_dc_metro:
+  - com.trainerize.goldsgymdcmetro/com.trainerize.MainActivity
+
+katawa_shoujo_re_engineered:
+  - sh.fhs.ksre/org.renpy.android.PythonSDLActivity
+
+mason_360:
+  - com.novalsys.gmu/com.cg.reactnative.MainActivity
+
+my_mesh:
+  - com.mymesh.wifi/com.mymesh.MyMesh.activity.Anew.Splash.SplashActivity
+
+paycell:
+  - com.turkcell.paycell/com.turkcell.paycell.ui.main.controller.MainActivity
+
+yemeksepeti:
+  - com.inovel.app.yemeksepeti/de.foodora.android.ui.launcher.LauncherActivity
+
+boat_progear:
+  - com.ido.boatprogear/com.ido.veryfitpro.module.bind.WelcomeActivity
+
+frontier_airlines:
+  - com.flyfrontier.android/com.flyfrontier.android.MainActivity
+
+jio_hostar:
+  - in.startv.hotstar/com.hotstar.MainActivityJv
+
+minutiae:
+  - com.minutiae/com.minutiae.splashscreen.SplashActivity
+
+pdf_wallet:
+  - com.michaeltroger.gruenerpass/com.michaeltroger.gruenerpass.MainActivity
+
+telepass:
+  - uk.co.novaware.telepass.android/it.telepass.appunica.SplashScreenActivity
+
+melvor_idle:
+  - com.malcs.melvoridle/co.median.android.LaunchActivity
+
+airtel:
+  - net.omobio.airtelsc/com.portonics.robi_airtel_super_app.ui.SplashActivity
+
+zalora:
+  - com.zalora.android/com.zalora.feature.startup.splash.SplashScreenActivity
+
+ingresso:
+  - com.ingresso.cinemas/br.com.ingresso.ui.activities.alias.DefaultAlias
+
+classeviva_studenti:
+  - eu.spaggiari.classevivastudente/eu.spaggiari.classeviva.classeviva.MainActivity
+
+geekbench:
+  - com.primatelabs.geekbench3/com.primatelabs.geekbench3.HomeActivity
+
+nanoleaf:
+  - me.nanoleaf.nanoleaf/me.nanoleaf.nanoleaf.feature.launcher.LauncherActivity
+
+terminal:
+  - com.termux.widget/com.termux.widget.activities.TermuxWidgetLauncherActivity
+
+ajax_security_system:
+  - com.ajaxsystems/com.ajaxsystems.session.launcher.presentation.LauncherActivity
+
+windows_app:
+  - com.microsoft.rdc.androidx/com.microsoft.windowsapp.ui.HomeActivity
