Fix icon link for AusPost

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+auspost:
+  - au.com.auspost.android/au.com.auspost.android.feature.app.ui.StartActivity
