--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,6 @@
 
 auspost:
   - au.com.auspost.android/au.com.auspost.android.feature.app.ui.StartActivity
+
+bupa:
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.ftoulsljxpdq
