Fix icon links (#1194)
* Fix icon link for AusPost

* Fix Bupa icon link

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+auspost:
+  - au.com.auspost.android/au.com.auspost.android.feature.app.ui.StartActivity
+
+bupa:
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.ftoulsljxpdq
