--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,12 @@ auspost:
 
 bupa:
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.ftoulsljxpdq
+
+popeyes:
+  - com.emn8.mobilem8.nativeapp.plkca/com.emn8.mobilem8.nativeapp.plkca.MainActivity
+
+dc_ot_campus_recreation:
+  - com.innosoftfusiongo.durhamcollege/com.innosoftfusiongo.durhamcollege.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/btfkj.y
