new icon: Orion Viewer

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,6 @@ dc_ot_campus_recreation:
 
 bhim:
   - in.org.npci.upiapp/btfkj.y
+
+orion_viewer:
+  - universe.constellation.orion.viewer/universe.constellation.orion.viewer.filemanager.OrionFileManagerActivity  
