new icon: MTS Money

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -29,4 +29,7 @@ bhim:
   - in.org.npci.upiapp/btfkj.y
 
 orion_viewer:
-  - universe.constellation.orion.viewer/universe.constellation.orion.viewer.filemanager.OrionFileManagerActivity  
+  - universe.constellation.orion.viewer/universe.constellation.orion.viewer.filemanager.OrionFileManagerActivity
+
+mts_money:
+  - ru.lewis.dbo/ru.mts.money.activities.MainActivity
