new icon: RLine

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ orion_viewer:
 
 mts_money:
   - ru.lewis.dbo/ru.mts.money.activities.MainActivity
+
+rline:
+  - ru.prontom.rlinelk/ru.prontom.rlinelk.ActivityMain
