new icon: Russian Sign Language

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,6 @@ mts_money:
 
 rline:
   - ru.prontom.rlinelk/ru.prontom.rlinelk.ActivityMain
+
+russian_sign_language:
+  - com.razeeman.study.russiansignlanguage/com.razeeman.study.russiansignlanguage.activities.ActivitySplash
