new icon: Amil Clientes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ rline:
 
 russian_sign_language:
   - com.razeeman.study.russiansignlanguage/com.razeeman.study.russiansignlanguage.activities.ActivitySplash
+
+amil_clientes:
+  - br.com.amil.beneficiarios/br.com.amil.uhg.MainActivity
