new icon: Condofy

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ russian_sign_language:
 
 amil_clientes:
   - br.com.amil.beneficiarios/br.com.amil.uhg.MainActivity
+
+condofy:
+  - br.com.condofy/io.flutter.embedding.android.FlutterActivity
