new icon: Grupo Consigaz

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,6 @@ amil_clientes:
 
 condofy:
   - br.com.condofy/io.flutter.embedding.android.FlutterActivity
+
+grupo_consigaz:
+  - com.consigaz.areacliente/com.consigaz.areacliente.ui.main.MainActivity
