new icon: glitch4ndroid

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,6 @@ condofy:
 
 grupo_consigaz:
   - com.consigaz.areacliente/com.consigaz.areacliente.ui.main.MainActivity
+
+glitch4ndroid:
+  - com.lucagrillo.ImageGlitcher/com.lucagrillo.imageGlitcher.SplashScreenActivity
