new icon: Kotak Bank

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,6 @@ grupo_consigaz:
 
 glitch4ndroid:
   - com.lucagrillo.ImageGlitcher/com.lucagrillo.imageGlitcher.SplashScreenActivity
+
+kotak_bank:
+  - com.kotak.bank.mobile/uxr1.mZLL.UIOx
