new icon: Banco do Brasil

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,6 @@ glitch4ndroid:
 
 kotak_bank:
   - com.kotak.bank.mobile/uxr1.mZLL.UIOx
+
+banco_do_brasil:
+  - br.com.bb.android/br.com.bb.android.ReactNativeActivityAliasNormal
