--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,21 @@ kotak_bank:
 
 banco_do_brasil:
   - br.com.bb.android/br.com.bb.android.ReactNativeActivityAliasNormal
+
+mobile_legend_bang_bang:
+  - com.mobile.legends.usa/com.moba.unityplugin.MobaGameMainActivityWithExtractor
+
+stayfree:
+  - com.burockgames.timeclocker/com.burockgames.timeclocker.activityAliasDefault
+
+yandex_alice:
+  - com.yandex.aliceapp/com.yandex.aliceapp.ui.MainActivity
+
+contacts:
+  - com.hihonor.contacts/com.android.contacts.activities.DialtactsActivity
+
+t_mobile_life:
+  - com.tmobile.tuesdays/com.telekom.tworld.dashboard.LauncherActivity
+
+adguard_vpn:
+  - com.adguard.vpn/com.adguard.vpn.ui.routing_activity.SplashActivity
