new icon: Bishkek My City

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,6 @@ t_mobile_life:
 
 adguard_vpn:
   - com.adguard.vpn/com.adguard.vpn.ui.routing_activity.SplashActivity
+
+bishkek_my_city:
+  - kg.cdt.townsman/com.example.moi_gorod.MainActivity
