--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,9 @@ adguard_vpn:
 
 bishkek_my_city:
   - kg.cdt.townsman/com.example.moi_gorod.MainActivity
+
+phyphox:
+  - de.rwth_aachen.phyphox/de.rwth_aachen.phyphox.ExperimentList.ExperimentListActivity
+
+tim_hortons:
+  - com.timhortons.android.my/com.timhortons.android.activities.SplashScreenActivity
