--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,69 @@ auspost:
 
 bupa:
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.ftoulsljxpdq
+
+popeyes:
+  - com.emn8.mobilem8.nativeapp.plkca/com.emn8.mobilem8.nativeapp.plkca.MainActivity
+
+dc_ot_campus_recreation:
+  - com.innosoftfusiongo.durhamcollege/com.innosoftfusiongo.durhamcollege.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/btfkj.y
+
+orion_viewer:
+  - universe.constellation.orion.viewer/universe.constellation.orion.viewer.filemanager.OrionFileManagerActivity
+
+mts_money:
+  - ru.lewis.dbo/ru.mts.money.activities.MainActivity
+
+rline:
+  - ru.prontom.rlinelk/ru.prontom.rlinelk.ActivityMain
+
+russian_sign_language:
+  - com.razeeman.study.russiansignlanguage/com.razeeman.study.russiansignlanguage.activities.ActivitySplash
+
+amil_clientes:
+  - br.com.amil.beneficiarios/br.com.amil.uhg.MainActivity
+
+condofy:
+  - br.com.condofy/io.flutter.embedding.android.FlutterActivity
+
+grupo_consigaz:
+  - com.consigaz.areacliente/com.consigaz.areacliente.ui.main.MainActivity
+
+glitch4ndroid:
+  - com.lucagrillo.ImageGlitcher/com.lucagrillo.imageGlitcher.SplashScreenActivity
+
+kotak_bank:
+  - com.kotak.bank.mobile/uxr1.mZLL.UIOx
+
+banco_do_brasil:
+  - br.com.bb.android/br.com.bb.android.ReactNativeActivityAliasNormal
+
+mobile_legend_bang_bang:
+  - com.mobile.legends.usa/com.moba.unityplugin.MobaGameMainActivityWithExtractor
+
+stayfree:
+  - com.burockgames.timeclocker/com.burockgames.timeclocker.activityAliasDefault
+
+yandex_alice:
+  - com.yandex.aliceapp/com.yandex.aliceapp.ui.MainActivity
+
+contacts:
+  - com.hihonor.contacts/com.android.contacts.activities.DialtactsActivity
+
+t_mobile_life:
+  - com.tmobile.tuesdays/com.telekom.tworld.dashboard.LauncherActivity
+
+adguard_vpn:
+  - com.adguard.vpn/com.adguard.vpn.ui.routing_activity.SplashActivity
+
+bishkek_my_city:
+  - kg.cdt.townsman/com.example.moi_gorod.MainActivity
+
+phyphox:
+  - de.rwth_aachen.phyphox/de.rwth_aachen.phyphox.ExperimentList.ExperimentListActivity
+
+tim_hortons:
+  - com.timhortons.android.my/com.timhortons.android.activities.SplashScreenActivity
