add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,78 @@ phyphox:
 
 tim_hortons:
   - com.timhortons.android.my/com.timhortons.android.activities.SplashScreenActivity
+
+audioteka:
+  - com.audioteka/com.audioteka.presentation.screen.main.MainActivity
+
+australian_mutual_bank:
+  - bank.australianmutual/crc644fb92b54b484f9c9.SplashActivity
+
+czyste_miasto_gdansk:
+  - pl.codever.ecoharmonogram.gdansk/pl.codever.ecoharmonogram.dashboard.web.WebDashboardActivity
+
+digital_id:
+  - com.digitalid.android/com.digitalid.android.features.initialize.views.SplashActivity
+
+drops_language_learning_games:
+  - com.languagedrops.drops.international/com.languagedrops.drops.international.MainActivity
+
+event_cinemas:
+  - com.ahl.eventcinemas/com.ahl.eventcinemas.MainActivity
+
+e_kartoteka:
+  - pl.ekartoteka.app/co.median.android.LaunchActivity
+
+e_urzad_skarbowy:
+  - pl.gov.mf.eus/crc640aad142aff4ebed7.MainActivity
+
+guzman_y_gomez:
+  - com.gyg.gomex/com.gyg_app.MainActivity
+
+hazards_near_me_nsw:
+  - au.gov.nsw.rfs.firesnearme.nsw/au.gov.nsw.rfs.firesnearme.nsw.MainActivity
+
+ktomalek:
+  - com.kamsoft.ktomalek/com.kamsoft.ktomalek.MainActivity
+
+linkt:
+  - com.transurban.linkt/com.transurban.citylink.presentation.start.ConfigActivity
+
+m3_expressive_widgets:
+  - com.appslab.materialyou.widgetspro/com.appslab.materialyou.widgetspro.MainActivity
+
+netatmo_weather:
+  - om.netatmo.netatmo/com.netatmo.netatmo.dashboard.DashboardActivity
+
+nothing_2a_watch_face:
+  - com.djay.nothing2awatchface/com.djay.nothing2awatchface.MainActivity
+
+orb:
+  - net.orb.orb/net.orb.orb.MainActivity
+
+peakfinder:
+  - org.peakfinder.area.alps/org.peakfinder.area.alps.activity.MainScreenEarth
+
+queensland_digital_licence:
+  - au.gov.qld.tmr.mdl.app/com.gemalto.ddl.dev.MainActivity
+
+scoot:
+  - com.flyscoot.android/com.flyscoot.android.ui.splash.SplashActivity
+
+sky_showtime:
+  - com.skyshowtime.skyshowtime.google/com.peacocktv.legacy.monolith.main.MainActivity
+
+sunrise_and_sunset_times:
+  - com.macca895.sunriise/com.macca895.sunriise.main.MainActivity
+
+team_pixel_wallpapers:
+  - com.lagguy.teampixelwallpapers/com.amaan.app.features.MainActivity
+
+wave_gen_1:
+  - com.airthings.airthings/com.airthings.airthings.usecase.onboarding.OnboardingContainerActivity
+
+i_am_from_gdansk:
+  - com.qbmobile.karty.jestemzgdanska/com.qbmobile.karty.onecard_flutter.MainActivity
+
+polskie_radio:
+  - pl.polskieradio.mobile/pl.polskieradio.mobile.MainActivity
