--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -159,3 +159,24 @@ i_am_from_gdansk:
 
 polskie_radio:
   - pl.polskieradio.mobile/pl.polskieradio.mobile.MainActivity
+
+alternate:
+  - com.lulu786.Alternate/com.lulu786.Alternate.MainActivity
+
+donetick:
+  - com.donetick.app/com.donetick.app.MainActivity
+
+fediplan:
+  - app.fedilab.fediplan/app.fedilab.fediplan.MainActivity
+
+grease_mily_way:
+  - net.kollnig.greasemilkyway/net.kollnig.greasemilkyway.MainActivity
+
+quick_tile_settings:
+  - com.rbn.qtsettings/com.rbn.qtsettings.MainActivity
+
+screen_time_foss:
+  - com.atharok.screentime/com.atharok.screentime.presentation.activities.MainActivity
+
+shots_studio:
+  - com.ansah.shots_studio/com.ansah.shots_studio.MainActivity
