--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -180,3 +180,9 @@ screen_time_foss:
 
 shots_studio:
   - com.ansah.shots_studio/com.ansah.shots_studio.MainActivity
+
+patreon:
+  - com.patreon.android/com.patreon.android.screens.launcher.LauncherActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.PreStreakSaver1Launcher
