Add icon for Estonian Government app

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+estonia:
+  - ee.ria.eesti.app/ee.ria.eesti.app.MainActivity
+
