add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,17 @@
 estonia:
   - ee.ria.eesti.app/ee.ria.eesti.app.MainActivity
 
+myvicroads:
+  - au.gov.vic.myvicroads/au.gov.vic.vicroads.MainActivity
+
+site_audit_pro:
+  - com.veamstudios.siteauditpro/com.veamstudios.siteauditpro.ProjectsActivit
+
+ukg_pro:
+  - com.ukg.oneapp/com.ukg.oneapp.shell.PreLaunchActivity
+
+wiim_home:
+  - com.linkplay.wiimhome/com.wifiaudio.app.Splash2Activity
+
+untappd:
+  - com.untappdllc.app/com.untappdllc.app.MainActivityDefault
