--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -29,3 +29,18 @@ wiim_home:
 
 untappd:
   - com.untappdllc.app/com.untappdllc.app.MainActivityDefault
+
+assistant_for_no_mans_sky:
+  - com.kurtlourens.no_mans_sky_recipes/io.flutter.embedding.android.FlutterActivity
+
+google_play_billing_lab:
+  - com.google.android.apps.play.billingtestcompanion/com.google.android.apps.play.billingtestcompanion.tiktok.navigation.NavigationRootActivity
+
+inter:
+  - it.inter.interapp/it.inter.ui.MainActivity
+
+kigo:
+  - com.parkimovil.app/com.parkimovil.app.MainActivity
+
+tiktok_studio:
+  - com.ss.android.tt.creator/com.ss.android.ugc.aweme.splash.SplashActivity
