--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -34,7 +34,9 @@ assistant_for_no_mans_sky:
   - com.kurtlourens.no_mans_sky_recipes/io.flutter.embedding.android.FlutterActivity
 
 google_play_billing_lab:
-  - com.google.android.apps.play.billingtestcompanion/com.google.android.apps.play.billingtestcompanion.tiktok.navigation.NavigationRootActivity
+  category: 'Google'
+  compinfos:
+    - com.google.android.apps.play.billingtestcompanion/com.google.android.apps.play.billingtestcompanion.tiktok.navigation.NavigationRootActivity
 
 inter:
   - it.inter.interapp/it.inter.ui.MainActivity
@@ -44,3 +46,28 @@ kigo:
 
 tiktok_studio:
   - com.ss.android.tt.creator/com.ss.android.ugc.aweme.splash.SplashActivity
+
+molly:
+  - im.molly.app/org.thoughtcrime.securesms.RoutingActivityAltColor
+
+wikiloc:
+  - com.wikiloc.wikilocandroid/com.wikiloc.wikilocandroid.view.activities.MainActivity
+
+symfonium:
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Note
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Red
+
+pixelix:
+  - com.daniebeler.pfpixelix/com.daniebeler.pfpixelix.Icon02
+
+termius:
+  - com.server.auditor.ssh.client/com.server.auditor.ssh.client.navigation.MainActivity
+
+ashell:
+  - in.sunilpaulmathew.ashell/in.sunilpaulmathew.ashell.activities.aShellActivity
+
+exteragram:
+  - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
+
+harmony_music:
+  - com.anandnet.harmonymusic/com.anandnet.harmonymusic.MainActivity
