add icons, credits @winghongchan

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -71,3 +71,12 @@ exteragram:
 
 harmony_music:
   - com.anandnet.harmonymusic/com.anandnet.harmonymusic.MainActivity
+
+bar_burrito:
+  - com.givex.cws5.barburrito/com.google.androidbrowserhelper.trusted.LauncherActivity
+
+churchs_texas_chicken:
+  - com.paradigm.churchs/com.paradigm.texaschicken.ui.activities.auth.SplashActivity
+
+kone_car_designer:
+  - com.kone.cardesignerapp/com.unity3d.player.UnityPlayerActivity
