add icons, credits @ticoeteco23gb

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -80,3 +80,12 @@ churchs_texas_chicken:
 
 kone_car_designer:
   - com.kone.cardesignerapp/com.unity3d.player.UnityPlayerActivity
+
+android_kitkat_challenge:
+  - com.doubleleft.androidkitkat/com.doubleleft.androidkitkat.AndroidKitKatActivity
+
+deltatraveller:
+  - com.RynoGG.DeltaTravelers/com.unity3d.player.UnityPlayerActivity
+
+hand_talk:
+  - br.com.handtalk/br.com.handtalk.MainActivity
