Add icons&compinfo (#1201)
* add icons, premium request

* add icons

* add componentinfo

* add icons, credits @winghongchan

* add icons, credits @ticoeteco23gb

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,77 @@
 estonia:
   - ee.ria.eesti.app/ee.ria.eesti.app.MainActivity
 
+myvicroads:
+  - au.gov.vic.myvicroads/au.gov.vic.vicroads.MainActivity
+
+site_audit_pro:
+  - com.veamstudios.siteauditpro/com.veamstudios.siteauditpro.ProjectsActivit
+
+ukg_pro:
+  - com.ukg.oneapp/com.ukg.oneapp.shell.PreLaunchActivity
+
+wiim_home:
+  - com.linkplay.wiimhome/com.wifiaudio.app.Splash2Activity
+
+untappd:
+  - com.untappdllc.app/com.untappdllc.app.MainActivityDefault
+
+assistant_for_no_mans_sky:
+  - com.kurtlourens.no_mans_sky_recipes/io.flutter.embedding.android.FlutterActivity
+
+google_play_billing_lab:
+  category: 'Google'
+  compinfos:
+    - com.google.android.apps.play.billingtestcompanion/com.google.android.apps.play.billingtestcompanion.tiktok.navigation.NavigationRootActivity
+
+inter:
+  - it.inter.interapp/it.inter.ui.MainActivity
+
+kigo:
+  - com.parkimovil.app/com.parkimovil.app.MainActivity
+
+tiktok_studio:
+  - com.ss.android.tt.creator/com.ss.android.ugc.aweme.splash.SplashActivity
+
+molly:
+  - im.molly.app/org.thoughtcrime.securesms.RoutingActivityAltColor
+
+wikiloc:
+  - com.wikiloc.wikilocandroid/com.wikiloc.wikilocandroid.view.activities.MainActivity
+
+symfonium:
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Note
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Red
+
+pixelix:
+  - com.daniebeler.pfpixelix/com.daniebeler.pfpixelix.Icon02
+
+termius:
+  - com.server.auditor.ssh.client/com.server.auditor.ssh.client.navigation.MainActivity
+
+ashell:
+  - in.sunilpaulmathew.ashell/in.sunilpaulmathew.ashell.activities.aShellActivity
+
+exteragram:
+  - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
+
+harmony_music:
+  - com.anandnet.harmonymusic/com.anandnet.harmonymusic.MainActivity
+
+bar_burrito:
+  - com.givex.cws5.barburrito/com.google.androidbrowserhelper.trusted.LauncherActivity
+
+churchs_texas_chicken:
+  - com.paradigm.churchs/com.paradigm.texaschicken.ui.activities.auth.SplashActivity
+
+kone_car_designer:
+  - com.kone.cardesignerapp/com.unity3d.player.UnityPlayerActivity
+
+android_kitkat_challenge:
+  - com.doubleleft.androidkitkat/com.doubleleft.androidkitkat.AndroidKitKatActivity
+
+deltatraveller:
+  - com.RynoGG.DeltaTravelers/com.unity3d.player.UnityPlayerActivity
+
+hand_talk:
+  - br.com.handtalk/br.com.handtalk.MainActivity
