--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -89,3 +89,6 @@ deltatraveller:
 
 hand_talk:
   - br.com.handtalk/br.com.handtalk.MainActivity
+
+lists:
+  - com.listaPh/com.listaPh.MainActivity
