--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -89,3 +89,9 @@ deltatraveller:
 
 hand_talk:
   - br.com.handtalk/br.com.handtalk.MainActivity
+
+lista:
+  - com.listaPh/com.listaPh.MainActivity
+
+zoom_earth:
+  - com.neave.zoomearth/com.neave.zoomearth.MainActivity
