--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -125,3 +125,15 @@ toscana_salute:
 
 underground_barber:
   - underground.working/underground.working.FullscreenActivity
+
+bma:
+  - com.bma.android/com.bma.android.setup.SetupActivity
+
+nnotes:
+  - com.bhavukverma.nNotes/com.bhavukverma.nNotes.MainActivity
+
+switchai:
+  - com.wstxda.switchai/com.wstxda.switchai.activity.MainActivity
+
+sysh:
+  - com.github.barmiro.syshclient/com.github.barmiro.syshclient.MainActivity
