--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -137,3 +137,6 @@ switchai:
 
 sysh:
   - com.github.barmiro.syshclient/com.github.barmiro.syshclient.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakSaverLauncher3
