Add icons&compinfo (#1205)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -95,3 +95,48 @@ lista:
 
 zoom_earth:
   - com.neave.zoomearth/com.neave.zoomearth.MainActivity
+
+blisslights:
+  - com.quhwa.mesh/com.quhwa.mesh.ui.activity.Aty_Splash
+
+clabel_trade:
+  - com.ctlabel.trade/com.ctlabel.trade.SplashActivity
+
+grow_with_jane:
+  - com.unlogical.jane/com.unlogical.jane.MainActivity
+
+inps_mobile:
+  - it.inps.mobile.app.servizi.activity/it.inps.mobile.app.home.activity.SplashScreenActivity
+
+miodottore:
+  - it.docplanner/com.app.MainActivity
+
+mybrt:
+  - com.dpdgroup.chatbot.brt.prod/com.dpdgroup.chatbot.MainActivity
+
+my_cofidis:
+  - com.cofidisit_prod.bad/com.e_i.bad.controls.activities.StartActivity
+
+nescafe_dolce_gusto:
+  - com.nestle.nescafe.dolcegusto/com.nestle.nescafe.dolcegusto.welcome.ui.SplashActivity
+
+toscana_salute:
+  - it.toscana.regione.smartsst/it.engds.smartsst.MainActivity
+
+underground_barber:
+  - underground.working/underground.working.FullscreenActivity
+
+bma:
+  - com.bma.android/com.bma.android.setup.SetupActivity
+
+nnotes:
+  - com.bhavukverma.nNotes/com.bhavukverma.nNotes.MainActivity
+
+switchai:
+  - com.wstxda.switchai/com.wstxda.switchai.activity.MainActivity
+
+sysh:
+  - com.github.barmiro.syshclient/com.github.barmiro.syshclient.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakSaverLauncher3
