add 2 icons with compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -140,3 +140,9 @@ sysh:
 
 duolingo:
   - com.duolingo/com.duolingo.app.StreakSaverLauncher3
+
+wakepoint:
+  - com.leywin.wakepoint/com.leywin.wakepoint.MainActivity
+
+animetint:
+  - com.leywin.animetint/com.leywin.animetint.MainActivity
