new icon: MyShows

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -146,3 +146,6 @@ wakepoint:
 
 animetint:
   - com.leywin.animetint/com.leywin.animetint.MainActivity
+
+myshows:
+  - ru.myshows.app/ru.myshows.app.ui.navigation.LauncherActivity
