--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -146,3 +146,19 @@ wakepoint:
 
 animetint:
   - com.leywin.animetint/com.leywin.animetint.MainActivity
+
+myshows:
+  - ru.myshows.app/ru.myshows.app.ui.navigation.LauncherActivity
+
+ufanet:
+  - ru.ufanet.myufanet/ru.ufanet.myufanet.MainActivity
+
+symfonium:
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Note
+  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Red
+
+xray:
+  - io.github.saeeddev94.xray/io.github.saeeddev94.xray.activity.MainActivity
+
+exteragram:
+  - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
