--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -162,3 +162,6 @@ xray:
 
 exteragram:
   - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
+
+bupa:
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.nbtwrcegkspv
