Add icon for orlen vitay

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -165,3 +165,6 @@ exteragram:
 
 bupa:
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.nbtwrcegkspv
+
+orlen_vitay:
+  - pl.orlen.vitay/pl.efigencesa.superapp.ui.main.splashscreen.SplashScreenActivity
