--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -162,3 +162,12 @@ xray:
 
 exteragram:
   - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
+
+bhim:
+  - in.org.npci.upiapp/vzzyrza.O
+
+carinfo:
+  - com.cuvora.carinfo/com.cuvora.carinfo.DefaultIcon
+
+vocabulary:
+  - com.hrd.vocabulary/com.hrd.view.onboarding.OnboardingSplashActivity
