add 3 icons & compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -171,3 +171,12 @@ carinfo:
 
 vocabulary:
   - com.hrd.vocabulary/com.hrd.view.onboarding.OnboardingSplashActivity
+
+fluttershark:
+  - com.fluttershark.fluttersharkapp/com.fluttershark.fluttersharkapp.MainActivity
+
+qsrotate:
+  - com.leywin.qsrotate/com.leywin.qsrotate.PermissionRequestActivity
+
+syncplay:
+  - com.reddnek.syncplay/com.yuroyami.syncplay.HomeActivity
