new icons & compinfo update (#1210)
* update 3 compinfo

* add 3 icons & compinfo

* update fluttershark icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -162,3 +162,21 @@ xray:
 
 exteragram:
   - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
+
+bhim:
+  - in.org.npci.upiapp/vzzyrza.O
+
+carinfo:
+  - com.cuvora.carinfo/com.cuvora.carinfo.DefaultIcon
+
+vocabulary:
+  - com.hrd.vocabulary/com.hrd.view.onboarding.OnboardingSplashActivity
+
+fluttershark:
+  - com.fluttershark.fluttersharkapp/com.fluttershark.fluttersharkapp.MainActivity
+
+qsrotate:
+  - com.leywin.qsrotate/com.leywin.qsrotate.PermissionRequestActivity
+
+syncplay:
+  - com.reddnek.syncplay/com.yuroyami.syncplay.HomeActivity
