add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -180,3 +180,21 @@ qsrotate:
 
 syncplay:
   - com.reddnek.syncplay/com.yuroyami.syncplay.HomeActivity
+
+balloon_meditation:
+  - com.greenhouse.balloon/com.greenhouse.balloon.MainActivity
+
+digitec:
+  - com.digitecapp/ch.digitecgalaxus.app.main.presentation.MainActivity
+
+dreamehome:
+  - com.dreame.smartlife/com.dreame.smartlife.ui.activity.SplashActivity
+
+gymbarspro:
+  - com.robusathletics.gymbarspro/com.robusathletics.gymbarspro.MainActivity
+
+scriptic_netflix_edition:
+  - com.netflix.NGP.Scriptic/com.unity3d.player.UnityPlayerActivity
+
+yuh:
+  - com.yuh/com.yuh.lib.main.presentation.MainActivity
