--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -198,3 +198,21 @@ scriptic_netflix_edition:
 
 yuh:
   - com.yuh/com.yuh.lib.main.presentation.MainActivity
+
+anydesk:
+  - com.anydesk.anydeskandroid/com.anydesk.anydeskandroid.gui.activity.HubActivity
+
+kagi_search:
+  - com.kagi.search/com.kagi.search.HomeActivity
+
+kfc:
+  - com.kfc.de.mobileapp/com.kfc.de.mobileapp.MainActivity
+
+takeaway:
+  - com.yopeso.lieferando/com.jet.singleactivity.ui.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.features.splash.SplashActivity
+
+microsoft_translator:
+  - com.microsoft.translator/com.microsoft.translator.TranslateHomeActivity
