--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -216,3 +216,12 @@ sprinti:
 
 microsoft_translator:
   - com.microsoft.translator/com.microsoft.translator.TranslateHomeActivity
+
+discoverium:
+  - org.cygnusx1.discoverium/dev.imranr.obtainium.MainActivity
+
+jellyseerr_mobile:
+  - com.anonymous.jellyseerrexpo/com.anonymous.jellyseerrexpo.MainActivity
+
+webuix_portable:
+  - com.dergoogler.mmrl.wx/com.dergoogler.mmrl.wx.ui.activity.MainActivity
