--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -225,3 +225,6 @@ jellyseerr_mobile:
 
 webuix_portable:
   - com.dergoogler.mmrl.wx/com.dergoogler.mmrl.wx.ui.activity.MainActivity
+
+notifications_recovery:
+  - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
