--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -180,3 +180,51 @@ qsrotate:
 
 syncplay:
   - com.reddnek.syncplay/com.yuroyami.syncplay.HomeActivity
+
+balloon_meditation:
+  - com.greenhouse.balloon/com.greenhouse.balloon.MainActivity
+
+digitec:
+  - com.digitecapp/ch.digitecgalaxus.app.main.presentation.MainActivity
+
+dreamehome:
+  - com.dreame.smartlife/com.dreame.smartlife.ui.activity.SplashActivity
+
+gymbarspro:
+  - com.robusathletics.gymbarspro/com.robusathletics.gymbarspro.MainActivity
+
+scriptic_netflix_edition:
+  - com.netflix.NGP.Scriptic/com.unity3d.player.UnityPlayerActivity
+
+yuh:
+  - com.yuh/com.yuh.lib.main.presentation.MainActivity
+
+anydesk:
+  - com.anydesk.anydeskandroid/com.anydesk.anydeskandroid.gui.activity.HubActivity
+
+kagi_search:
+  - com.kagi.search/com.kagi.search.HomeActivity
+
+kfc:
+  - com.kfc.de.mobileapp/com.kfc.de.mobileapp.MainActivity
+
+takeaway:
+  - com.yopeso.lieferando/com.jet.singleactivity.ui.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.features.splash.SplashActivity
+
+microsoft_translator:
+  - com.microsoft.translator/com.microsoft.translator.TranslateHomeActivity
+
+discoverium:
+  - org.cygnusx1.discoverium/dev.imranr.obtainium.MainActivity
+
+jellyseerr_mobile:
+  - com.anonymous.jellyseerrexpo/com.anonymous.jellyseerrexpo.MainActivity
+
+webuix_portable:
+  - com.dergoogler.mmrl.wx/com.dergoogler.mmrl.wx.ui.activity.MainActivity
+
+notifications_recovery:
+  - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
