add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -228,3 +228,15 @@ webuix_portable:
 
 notifications_recovery:
   - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
+
+birthday_calendar:
+  - dev.cwolf.birthdaycalendar/dev.cwolf.birthdaycalendar.MainActivity
+
+levels_fyi:
+  - com.levels.mobile/com.levels.mobile.MainActivity
+
+seattle_yellow_cab:
+  - com.seattleyellowcab.passengerapp/com.icabbi.passengerapp.presentation.screens.launcher.LauncherActivity
+
+the_seattle_times:
+  - com.seattletimes.android.SeattleTimesMobileNews/com.seattletimes.android.SeattleTimesMobileNews.MainActivity
