--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -240,3 +240,6 @@ seattle_yellow_cab:
 
 the_seattle_times:
   - com.seattletimes.android.SeattleTimesMobileNews/com.seattletimes.android.SeattleTimesMobileNews.MainActivity
+
+luxer_one:
+  - com.luxerone.mobile.residentapp/com.luxerone.mobile.residentapp.MainActivity
