Add icons&compinfo (#1212)
* add icons, premium request

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -153,15 +153,8 @@ myshows:
 ufanet:
   - ru.ufanet.myufanet/ru.ufanet.myufanet.MainActivity
 
-symfonium:
-  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Note
-  - app.symfonik.music.player/app.symfonik.ui.MainActivity.Red
-
 xray:
   - io.github.saeeddev94.xray/io.github.saeeddev94.xray.activity.MainActivity
-
-exteragram:
-  - com.exteragram.messenger/com.exteragram.messenger.SpaceIcon
 
 bhim:
   - in.org.npci.upiapp/vzzyrza.O
@@ -228,3 +221,18 @@ webuix_portable:
 
 notifications_recovery:
   - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
+
+birthday_calendar:
+  - dev.cwolf.birthdaycalendar/dev.cwolf.birthdaycalendar.MainActivity
+
+levels_fyi:
+  - com.levels.mobile/com.levels.mobile.MainActivity
+
+seattle_yellow_cab:
+  - com.seattleyellowcab.passengerapp/com.icabbi.passengerapp.presentation.screens.launcher.LauncherActivity
+
+the_seattle_times:
+  - com.seattletimes.android.SeattleTimesMobileNews/com.seattletimes.android.SeattleTimesMobileNews.MainActivity
+
+luxer_one:
+  - com.luxerone.mobile.residentapp/com.luxerone.mobile.residentapp.MainActivity
