--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -156,6 +156,12 @@ ufanet:
 xray:
   - io.github.saeeddev94.xray/io.github.saeeddev94.xray.activity.MainActivity
 
+bupa:
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.nbtwrcegkspv
+
+orlen_vitay:
+  - pl.orlen.vitay/pl.efigencesa.superapp.ui.main.splashscreen.SplashScreenActivity
+
 bhim:
   - in.org.npci.upiapp/vzzyrza.O
 
