--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,14 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+  eduvulcan:
+    - pl.edu.vulcan.hebe.ce/pl.edu.vulcan.MainActivity
+
+  opay:
+    - team.opay.pay/team.opay.pay.home.DexloadActivity
+
+  vinbus:
+    - vn.vinbus.app.prd/vn.vinbus.app.activity.VBSplashActivity
+
+  vinbus_alt_1: {}
