Add new compinfo for Yatri

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -23,3 +23,6 @@ vinbus:
   - vn.vinbus.app.prd/vn.vinbus.app.activity.VBSplashActivity
 
 vinbus_alt_1: {}
+
+yatri:
+  - in.juspay.nammayatri/com.mobility.movingtech.MainActivity
