add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -26,3 +26,63 @@ vinbus_alt_1: {}
 
 yatri:
   - in.juspay.nammayatri/com.mobility.movingtech.MainActivity
+
+at_bus:
+  - com.ratp.toscane/com.is.android.views.MainInstantSystem
+
+battery_widget:
+  - com.lstapps.batterywidget/com.lstapps.batterywidget.MainActivity
+
+budlabs:
+  - com.advancednutrients.budlabs/com.advancednutrients.budlabs.ui.StartupActivity
+
+coffe_capp:
+  - com.yourvoice.ccApp/com.yourvoice.ccApp.MainActivity
+
+coloros_translate:
+  - com.coloros.translate/com.coloros.translate.ui.MainActivity
+
+dusky_walls:
+  - com.stark.dusky/com.stark.dusky.MainActivity
+
+get_current_wallpaper:
+  - dk.appdictive.getcurrentwallpaper/dk.appdictive.getcurrentwallpaper.MainActivity
+
+lunar_wallpapers:
+  - com.lunar.wallpapers/com.lunar.wallpapers.MainActivity
+
+mediately_drug_registry:
+  - com.mediately.drugs.it/com.mediately.drugs.activities.MainActivity
+
+moonlit_walls:
+  - moonlit.wigebox.walls/moonlit.wigebox.walls.MainActivity
+
+photone:
+  - io.lightray.photone/io.lightray.photone.main.MainActivity
+
+rciclo:
+  - industrialsoftware.geofor.rciclo/industrialsoftware.geofor.rciclo.MainActivity
+
+scalapay:
+  - com.scalapay.scalapay_customer_app/com.scalapay.scalapay_customer_app.MainActivity
+
+tabnet:
+  - parking.Android/com.nttdata.tabnet.MainActivity
+
+the_day_before:
+  - com.aboutjsp.thedaybefore/com.aboutjsp.thedaybefore.ui.main.MainActivity
+
+transavia:
+  - com.mttnow.droid.transavia/com.transavia.MainActivity
+
+wallops:
+  - wallops.wigebox.walls/wallops.wigebox.walls.MainActivity
+
+wallyce_wallpapers:
+  - com.introdructor.wallyce/com.introdructor.wallyce.MainActivity
+
+carrefour:
+  - it.carrefour.mycarrefour/it.carrefour.mycarrefour.MainActivity
+
+camera:
+  - com.joyhonest.wifi_check/com.joyhonest.wifi_check.SplashActivity
