--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,3 +86,24 @@ carrefour:
 
 camera:
   - com.joyhonest.wifi_check/com.joyhonest.wifi_check.SplashActivity
+
+advanced_port_checker:
+  - com.codedead.advancedportchecker/com.codedead.advancedportchecker.gui.activity.LoadingActivity
+
+bicoccapp:
+  - it.bicoccapp.unimib/kotuko.bicocca_app.MainActivity
+
+rabby_wallet:
+  - com.debank.rabbymobile/com.debank.rabbymobile.MainActivity
+
+razer_nexus:
+  - com.razer.bianca/com.razer.bianca.ui.splash.SplashActivity
+
+shuffles:
+  - com.pinterest.shuffles/com.pinterest.shuffles.MainActivity
+
+spotiq_ten:
+  - com.frack.spotiqten/com.frack.spotiqten.SplashActivity
+
+soundcloud:
+  - com.soundcloud.android/com.soundcloud.android.launcher.LauncherActivityOgIconAlias
